--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "license": "private",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "geolang-express": "^1.0.0",
+    "i18n-express": "^1.1.3",
+    "path": "^0.12.7",
     "reload": "^1.0.0",
     "socket.io": "^1.4.8"
   }
