--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
     "geolang-express": "^1.0.0",
     "i18n-express": "^1.1.3",
     "path": "^0.12.7",
