--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "i18n-express": "^1.1.3",
     "path": "^0.12.7",
     "reload": "^1.0.0",
+    "request-ip": "^2.0.2",
     "socket.io": "^1.4.8"
   }
 }
