--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
+    "geoip-lite": "^1.2.1",
     "geolang-express": "^1.0.0",
     "i18n-express": "^1.1.3",
+    "ipware": "^1.0.0",
     "path": "^0.12.7",
     "reload": "^1.0.0",
+    "request-country": "^0.1.0",
+    "request-ip": "^2.0.2",
     "socket.io": "^1.4.8"
   }
 }
