--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "geolang-express": "^1.0.0",
     "i18n-express": "^1.1.3",
     "ipware": "^1.0.0",
+    "multer": "^1.3.0",
     "path": "^0.12.7",
     "reload": "^1.0.0",
     "request-country": "^0.1.0",
